feat: handle errors in ui without crashing the whole app :)

--- a/desktop/assets/main.css
+++ b/desktop/assets/main.css
@@ -4,3 +4,11 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 20px;
 }
+
+.error-message {
+    color: darkred;
+}
+
+.error-message::before {
+    content: '⚠️'
+}
