--- a/input.css
+++ b/input.css
@@ -1,9 +1,9 @@
 @import "tailwindcss";
 
 @source "./src/**/*.{rs,html,css}";
- 
+
 @layer base {
     body {
-        @apply bg-slate-800;
+        @apply bg-slate-900 text-slate-200 mx-4;
     }
 }
